force-app/force-app/force-app/main/default/objects/Customer_Satisfaction_Index__c/Customer_Satisfaction_Index__c.object-meta.xml
<CustomObject>
    <label>Customer Satisfaction Index</label>
    <nameField>
        <displayFormat>CSI-{0000}</displayFormat>
        <label>Customer Satisfaction Index Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Satisfaction Index</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>