force-app/force-app/force-app/main/default/objects/Customer_Satisfaction_Index__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>TEXT(Customer_Name__r.Billing_District__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>