force-app/force-app/force-app/main/default/objects/Customer_Satisfaction_Index__c/fields/Customer_Grading__c.field-meta.xml
<CustomField>
    <fullName>Customer_Grading__c</fullName>
    <label>Customer Grading</label>
    <summarizedField>Executive_Rating__c.Rating__c</summarizedField>
    <summaryForeignKey>Executive_Rating__c.Customer_Satisfaction_Index__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>