force-app/force-app/force-app/main/default/objects/Customer_Satisfaction_Index__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Executive__c</columns>
    <columns>Date__c</columns>
    <columns>Customer_Grading__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>