force-app/force-app/force-app/main/default/objects/Customer_Satisfaction_Index__c/listViews/CSI_List.listView-meta.xml
<ListView>
    <fullName>CSI_List</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Customer_Grading__c</columns>
    <columns>Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>CSI List</label>
</ListView>